fixed scrollbar

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -63,10 +63,12 @@ body {
   }
 }
 
+
 * {
   &::-webkit-scrollbar {
     width: 10px;
     height: 10px;
+
     @include s.devices(mobile) {
       width: 8px;
       height: 8px;
@@ -84,6 +86,39 @@ body {
   }
 
   &::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+}
+
+
+//firefox
+* {
+  scrollbar-color: var(--disabled) transparent;
+  scrollbar-width: thin;
+
+
+  &::-moz-scrollbar {
+    width: 10px;
+    height: 10px;
+
+    @include s.devices(mobile) {
+      width: 8px;
+      height: 8px;
+    }
+  }
+
+  &::-moz-scrollbar-thumb {
+    background: var(--disabled);
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px 0 0 10px;
+  }
+
+  &::-moz-scrollbar-thumb:horizontal {
+    border-radius: 10px 10px 0 0;
+  }
+
+  &::-moz-scrollbar-track {
     background: transparent;
   }
 }
